@@ -7,6 +7,7 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -19,14 +20,32 @@ public class CategoryService {
     }
 
     public List<CategoryFoodCountResponseDTO> getCategoryFoodCounts() {
-        List<Object[]> results = categoryRepository.findCategoriesWithFoodCount();
-        return results.stream()
+        return categoryRepository.findCategoriesWithFoodCount().stream()
                 .map(row -> CategoryFoodCountResponseDTO.builder()
                         .id((Long) row[0])
                         .name((String) row[1])
                         .imageUrl((String) row[2])
                         .foodCount((Long) row[3])
                         .build())
-                .toList();
+                .collect(Collectors.toList());
+    }
+
+    public Category createCategory(com.uit.fooddelivery_api.modules.food.dtos.CreateCategoryDTO dto) {
+        Category category = Category.builder()
+                .name(dto.getName())
+                .imageUrl(dto.getImageUrl())
+                .build();
+        return categoryRepository.save(category);
+    }
+
+    public Category updateCategory(Long id, com.uit.fooddelivery_api.modules.food.dtos.CreateCategoryDTO dto) {
+        Category category = categoryRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Không tìm thấy danh mục món ăn với id: " + id));
+        category.setName(dto.getName());
+        if (dto.getImageUrl() != null) {
+            category.setImageUrl(dto.getImageUrl());
+        }
+        return categoryRepository.save(category);
     }
 }
+
